--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-            <scope>provided</scope>
+            <!--scope>provided</scope-->
         </dependency>
 
         <dependency>
@@ -107,6 +107,15 @@
             <version>3.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-jaxrs_2.10</artifactId>
+            <version>1.3.7</version>
+            <scope>compile</scope>
+        </dependency>
+
+
 
     </dependencies>
 
