--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.github.mrconfig</groupId>
     <artifactId>mrconfig</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
 
@@ -132,6 +132,7 @@
                         <compilerArgument>-proc:none</compilerArgument>
                 </configuration>
             </plugin>
+
 
             <plugin>
                 <groupId>org.bsc.maven</groupId>
