--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>1.8.7</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>com.wordnik</groupId>
